--- a/assets/style.css
+++ b/assets/style.css
@@ -482,6 +482,8 @@ header{
     justify-content: flex-end;
     align-items: center;
     padding: 0!important;
+    position: absolute;
+    top: 20px;
 }
 #cart .cart-total{
     padding: 2px;
