--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -4,5 +4,5 @@
   {% endfor %}
 </div>
 <script>
-  $(this).next(".dropdown").toggleClass("dropped");
+  $(".dropdown").addClass("dropped");
 </script>
