--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -85,7 +85,7 @@ fernandoepeso.info
   <!--Header-->
   <header id="header" class="header">
     <div class="logo">
-      <svg id="uuid-00d08a67-11e5-46c1-aaf1-3924bc15e6af" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 281 36.6">
+      <svg id="uuid-00d08a67-11e5-46c1-aaf1-3924bc15e6af" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="281" height="36.6" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 281 36.6">
         <defs>
           <clipPath id="uuid-8b8395cb-a441-4722-8ae2-c73d36cb9a27">
             <rect y="0" width="281" height="36.6" style="fill: none;"/>
