--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -84,7 +84,7 @@ fernandoepeso.info
   </div>
   <!--Header-->
   <header id="header" class="header">
-    
+
     <a class="logo" href="../collections">
       <svg id="uuid-00d08a67-11e5-46c1-aaf1-3924bc15e6af" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="281" height="36.6" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 281 36.6">
         <defs>
@@ -149,7 +149,7 @@ fernandoepeso.info
         </div>
   	 </div>
      <div class="link-about-mobile"><a href="../pages/about">About</a></div>
-     <div class="switch-view hov">List</div>
+     <div class="switch-view hov">Switch</div>
   </div>
   </header>
   {% if template == 'index'%}
