--- a/assets/style.css
+++ b/assets/style.css
@@ -768,9 +768,10 @@ header{
 .sold-out, .sale{
   position: relative;
   z-index: 10;
+  width: 50%;
   color:var(--white);
   padding:2px;
-    padding-top: 3px!important;
+  padding-top: 3px!important;
   padding-left: 5px;
   left: 0px;
   background-color: var(--black);
@@ -835,6 +836,7 @@ div#related >.product:first-child{
   padding: 2px 5px 2px 5px;
 }
 .layer{
+  z-index: 100;
   height: 100%;
   width: 100%;
   position: absolute;
