--- a/templates/list-collections.liquid
+++ b/templates/list-collections.liquid
@@ -4,6 +4,12 @@
   {% endfor %}
 </div>
 <script>
-  $(".dropdown").addClass("dropped");
-  $(".link").addClass("active");
+$(window).resize(function() {
+  var width = $(window).width();
+  if (width < 600){
+    $(".dropdown").addClass("dropped");
+      $(".link").addClass("active");  }
+  else{
+  }
+});
 </script>
