--- a/templates/list-collections.liquid
+++ b/templates/list-collections.liquid
@@ -6,7 +6,7 @@
 <script>
 $(window).resize(function() {
   var width = $(window).width();
-  if (width < 600){
+  if (width > 600){
     $(".dropdown").addClass("dropped");
       $(".link").addClass("active");  }
   else{
