--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -133,6 +133,8 @@ fernandoepeso.info
             {% endfor %} -->
     </div>
     <div class="cart-part">
+      {%- section 'go-cart' -%}
+      {%- include "go-cart-button" -%}
 
 
         <div id="cart">
