--- a/assets/style.css
+++ b/assets/style.css
@@ -913,7 +913,13 @@ footer{
 .go-cart-item__remove {
   position: relative!important;
 }
-
+.go-cart-item__info{
+  width: 100%;
+  display: grid;
+  max-width: 250px;
+  line-height: 1.18;
+  padding: 10px 10px 10px 30px;
+}
 .go-cart-drawer__subtotal {
       display: grid!important;;
       grid-gap: 12px!important;;
