--- a/assets/style.css
+++ b/assets/style.css
@@ -917,7 +917,7 @@ footer{
   width: 100%!important;;
   display: grid!important;;
   max-width: 100%!important;
-  padding: 10px 10px 10px 30px!important;;
+  padding: 0px!important;;
 }
 .go-cart-drawer__subtotal {
       display: grid!important;;
