--- a/assets/style.css
+++ b/assets/style.css
@@ -479,7 +479,7 @@ header{
     justify-content: flex-end;
     align-items: center;
     padding: 0!important;
-    position: absolute;
+    position: sticky;
     top: 20px;
 }
 #cart .cart-total{
@@ -904,11 +904,11 @@ footer{
 /* CART
 ================================================== */
 .go-cart-drawer__footer, .go-cart-drawer__subtotal {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    padding: 0px!important;
-    -webkit-transition:none;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0px!important;
+  -webkit-transition:none;
 }
 .go-cart-item__remove {
   position: relative!important;
@@ -920,18 +920,16 @@ footer{
   padding: 0px!important;;
 }
 .go-cart-drawer__subtotal {
-      display: grid!important;;
-      grid-gap: 12px!important;;
-      grid-template-columns: repeat(4,1fr)!important;;
-      border: 0.5px solid!important;
-      justify-content: unset!important;;
-      width: 100%!important;;
-  }
-.go-cart-item__image{
-      margin-bottom: 12px!important;
+  display: grid!important;;
+  grid-gap: 12px!important;;
+  grid-template-columns: repeat(4,1fr)!important;;
+  border: 0.5px solid!important;
+  justify-content: unset!important;;
+  width: 100%!important;;
 }
-
-
+.go-cart-item__image{
+  margin-bottom: 12px!important;
+}
 .go-cart__drawer {
   position: fixed;
   top: 0;
@@ -955,25 +953,25 @@ footer{
   background-color: var(--black)!important;
 }
 .go-cart__button {
-    background: #000;
-    color: #fff;
-    padding: 0px!important;
-    text-align: center;
-    cursor: pointer;
+  background: #000;
+  color: #fff;
+  padding: 0px!important;
+  text-align: center;
+  cursor: pointer;
 }
 .go-cart-item__image {
-    width: 100%!important;
-    height: 180px!important;
-    background-size: cover;
-    background-position: 50%;
-    background-repeat: no-repeat;
+  width: 100%!important;
+  height: 180px!important;
+  background-size: cover;
+  background-position: 50%;
+  background-repeat: no-repeat;
 }
 .go-cart-item__single {
-    position: relative;
-    -webkit-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out;
-    padding: 0px 0!important;;
-    border-bottom: 0px solid #f5f5f5!important;;
+  position: relative;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  padding: 0px 0!important;;
+  border-bottom: 0px solid #f5f5f5!important;;
 }
 .go-cart__overlay {
   background-color: transparent!important;
@@ -982,10 +980,10 @@ footer{
   display: none;
 }
 .go-cart-item__quantity {
-    display: none;
-    position: absolute;
-    bottom: 10px;
-    align-items: center;
+  display: none;
+  position: absolute;
+  bottom: 10px;
+  align-items: center;
 }
 #cart-wrapper{
   flex-grow: 1;
@@ -1021,26 +1019,26 @@ footer{
   grid-gap: 12px;
 }
 .go-cart__button {
-    background: var(--white)!important;
-    color: var(--black)!important;
-    padding: 3px 2px 2px 2px!important;
-    text-align: center;
-    cursor: pointer;
-    margin-bottom: 5px;
+  background: var(--white)!important;
+  color: var(--black)!important;
+  padding: 3px 2px 2px 2px!important;
+  text-align: center;
+  cursor: pointer;
+  margin-bottom: 5px;
 }
 .go-cart-drawer__footer {
-    flex-direction: column;
-    height: auto!important;
-    padding: 0px!important;
+  flex-direction: column;
+  height: auto!important;
+  padding: 0px!important;
 }
 .go-cart-item__quantity {
-    display: none!important;
+  display: none!important;
 }
 .go-cart-drawer__subtotal {
-    align-items: center;
-    margin-bottom: 5px;
-    padding: 3px 2px 2px 5px!important;
-    height: auto!important;
+  align-items: center;
+  margin-bottom: 5px;
+  padding: 3px 2px 2px 5px!important;
+  height: auto!important;
 }
 .item-title{
   grid-column:span 3;
