--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -137,7 +137,7 @@ fernandoepeso.info
       {%- include "go-cart-button" -%}
 
 
-        <div id="cart">
+        <!-- <div id="cart">
           <div {% if template == 'cart' %}  class="active baggie hov" {% endif %} class="baggie hov">
               <a href="/cart">Cart</a>
           </div>
@@ -148,7 +148,7 @@ fernandoepeso.info
                 {{- cart.item_count -}}
                 {%- endif -%}
           </div>
-        </div>
+        </div> -->
   	 </div>
      <div class="link-about-mobile"><a href="../pages/about">About</a></div>
      <div class="switch-view hov">Switch</div>
