--- a/assets/style.css
+++ b/assets/style.css
@@ -1016,16 +1016,19 @@ footer{
 .go-cart-item__title::before {
   content: "Item";
   color:grey;
+  position: absolute;
+  left: 40%;
 }
 .go-cart-item__price::before {
   content: "Price";
+  position: absolute;
+  left: 40%;
   color:grey;
 }
 .go-cart-item__title{
   padding: 3px;
 }
 .go-cart-item__price{
-  
   padding: 3px;
 }
 .go-cart-drawer__footer {
