--- a/assets/style.css
+++ b/assets/style.css
@@ -957,7 +957,8 @@ footer{
   position: relative;
   -webkit-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
-  padding: 0px 0!important;;
+  padding: 0px 0!important;
+  margin-bottom: 12px;
   border-bottom: 0px solid #f5f5f5!important;;
 }
 .go-cart__overlay {
