--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -16,11 +16,11 @@
                 </select>
                 <!--Actions-->
                 {% if product.available %}
-                      <div class="js-go-cart-add-to-cart addtocart hov"><button id="produ" type="submit" name="add">ADD TO CART</button></div>
+                      <div class="js-go-cart-add-to-cart addtocart hov"><button id="produ">ADD TO CART</button></div>
                   {% else %}
                     <div class="addtocart hov"><button id="produ" type="submit" name="add">SOLD OUT</button></div>
                   {% endif %}
- 
+
               </div>
           </form>
           <div class="main-information">
