--- a/assets/style.css
+++ b/assets/style.css
@@ -1202,6 +1202,7 @@ div#related {
 .go-cart-drawer__content {
     height: var(--h)!important;
     overflow: hidden;
+    padding: 0px!important;
     overflow-y: scroll;
     padding-top: var(--m)!important;
 }
