--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -72,14 +72,15 @@
 
         <!--go cart drawer buttons-->
         <div class="go-cart-drawer__footer js-go-cart-drawer-footer">
-
+          <div class="go-cart-drawer__subtotal">
+              <span>Subtotal: </span>
+              <span class="go-cart-drawer__subtotal-price js-go-cart-drawer-subtotal"></span>
+          </div>
             <a href="/checkout/" class="go-cart__button">
-                Proceed to checkout
-            </a>
+PROCCED TO CHECKOUT            </a>
 
             <a href="/cart/" class="go-cart__button">
-                View cart
-            </a>
+VIEW CART            </a>
 
         </div>
         <!--end go cart drawer buttons-->
