--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -5,7 +5,7 @@
 
         <!--go cart modal close-->
         <div class="go-cart-modal__close js-go-cart-modal-fail-close">
-          close
+          <div class="link hov">close</div>
         </div>
         <!--end go cart modal close-->
 
@@ -64,13 +64,13 @@
 
 
         <!--go cart drawer subtotal-->
-      
+
         <!--end go cart drawer subtotal-->
 
         <!--go cart drawer buttons-->
         <div class="go-cart-drawer__footer js-go-cart-drawer-footer">
           <div class="go-cart-drawer__subtotal">
-              <span>Subtotal: </span>
+              <span>Subtotal</span>
               <span class="go-cart-drawer__subtotal-price js-go-cart-drawer-subtotal"></span>
           </div>
             <a href="/checkout/" class="go-cart__button">
