--- a/assets/style.css
+++ b/assets/style.css
@@ -752,7 +752,7 @@ header{
 }
 
 .sold-out, .sale{
-  position: relative;
+  position: absolute;
   z-index: 10;
   width: 50%;
   color:var(--white);
