--- a/templates/page.about.liquid
+++ b/templates/page.about.liquid
@@ -1,4 +1,5 @@
 <!--Content-->
+{%- section 'home_news' -%}
 <div id="products">
   <div class="back link hov"><a onclick="history.back()">Back</a></div>
 </div>
