--- a/templates/page.about.liquid
+++ b/templates/page.about.liquid
@@ -46,6 +46,9 @@
     background-color: var(--black);
     color: var(--white);
   }
+  #products{
+    z-index: 100;
+  }
   .back{
     height: fit-content;
   }
