--- a/templates/page.liquid
+++ b/templates/page.liquid
@@ -13,4 +13,9 @@
     .switch-view{
       display: none;
     }
+    @media (max-width: 800px){
+      .menu, .cart-part, .link-about-mobile{
+        display: none;
+      }  
+    }
 </style>
