--- a/templates/page.liquid
+++ b/templates/page.liquid
@@ -13,9 +13,12 @@
     .switch-view{
       display: none;
     }
+    .menu, .cart-part, .link-about-mobile{
+      display: none;
+    }  
     @media (max-width: 800px){
       .menu, .cart-part, .link-about-mobile{
         display: none;
-      }  
+      }
     }
 </style>
