--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -34,7 +34,7 @@
             </div>
             <div class="info-product">
               <div>Item</div>
-              <div class="hov"><a href="{{ product.url }}">{{ product.title}}</a></div>
+              <div>{{ product.title}}</div>
             </div>
             <div class="info-product">
               <div><a>Price</a></div>
