--- a/assets/style.css
+++ b/assets/style.css
@@ -316,7 +316,7 @@ header{
 }
 
 .logo svg{
-  height: fit-content;
+  height: auto;
   display: block;
   width: 100%;
   fill:var(--black)!important;
