--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -86,7 +86,8 @@ fernandoepeso.info
   <header id="header" class="header">
 
     <a class="logo">
-      <svg href="../collections" id="uuid-00d08a67-11e5-46c1-aaf1-3924bc15e6af" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="281" height="36.6" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 281 36.6">
+      <a href="../collections">
+        <svg id="uuid-00d08a67-11e5-46c1-aaf1-3924bc15e6af" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="281" height="36.6" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 281 36.6">
         <defs>
           <clipPath id="uuid-8b8395cb-a441-4722-8ae2-c73d36cb9a27">
             <rect y="0" width="281" height="36.6" style="fill: none;"/>
@@ -108,6 +109,7 @@ fernandoepeso.info
         </g>
         <polygon points="185.9 .75 185.9 14.09 169.3 14.09 169.3 .75 161.68 .75 161.68 35.85 169.3 35.85 169.3 21.11 185.9 21.11 185.9 35.85 193.52 35.85 193.52 .75 185.9 .75"/>
       </svg>
+      </a>
     </a>
     <div class="menu">
       <div class="drop">
