--- a/assets/style.css
+++ b/assets/style.css
@@ -1257,6 +1257,11 @@ div#related {
 .link{
   grid-column: span 1;
 }
+.thumbnail-randmon img{
+  height: auto!important;
+  width: 80vw!important;
+  border:0.5px solid var(--black);
+}
 
 
 }
