--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -68,7 +68,7 @@
         <!--end go cart drawer subtotal-->
 
         <!--go cart drawer buttons-->
-        <div class="go-cart-drawer__footer js-go-cart-drawer-footer">
+        <div class="go-cart-drawer__footer js-go-cart-drawer-footer" id="fc">
           <div class="go-cart-drawer__subtotal">
               <span>Subtotal</span>
               <span class="go-cart-drawer__subtotal-price js-go-cart-drawer-subtotal"></span>
