--- a/assets/style.css
+++ b/assets/style.css
@@ -918,7 +918,7 @@ padding: 20px 30px;
     padding: 0px!important;
     overflow-y: scroll;
     padding-top: var(--m)!important;
-    padding-bottom: var(--fc)!important;
+    padding-bottom: calc(var(--fc) + 20px)!important;
 }
 .go-cart-item__remove {
   top: 0px!important;
