--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -50,7 +50,10 @@
         <div class="go-cart-drawer__header">
 
             <div class="go-cart-drawer__close js-go-cart-drawer-close">
-                close
+              <div id="cart">
+                  <div class="baggie hov">Cart</div>
+                  <div class="js-go-cart-counter cart-total">{{- cart.item_count -}}</div>
+              </div>
             </div>
 
         </div>
