--- a/assets/style.css
+++ b/assets/style.css
@@ -950,6 +950,9 @@ padding: 20px 30px;
 .go-cart-drawer__close #cart{
   border:0.5px solid var(--white);
 }
+.go-cart-drawer__close #cart{
+  width: 50%!important;
+}
 .go-cart__drawer {
   position: fixed;
   top: 0;
