--- a/assets/style.css
+++ b/assets/style.css
@@ -956,6 +956,13 @@ padding: 20px 30px;
 .go-cart-drawer__close #cart .cart-total {
   border-left: 0.5px solid var(--white);
 }
+.closecart {
+  position: absolute;
+  top: 0px;
+  padding: 3px;
+  border:0.5px solid var(--white);
+
+}
 .go-cart__drawer {
   position: fixed;
   top: 0;
