--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -54,7 +54,7 @@
                   <div class="baggie hov">Cart</div>
                   <div class="js-go-cart-counter cart-total">{{- cart.item_count -}}</div>
               </div>
-              <div class="closer">X</div>
+              <div class="closecart">X</div>
             </div>
 
         </div>
