--- a/assets/style.css
+++ b/assets/style.css
@@ -1279,7 +1279,9 @@ div#related {
   width: 80vw!important;
   border:0.5px solid var(--black);
 }
-
+.go-cart-drawer__content {
+    padding-top: 100px!important;
+}
 
 }
 /*BIGGER DESKTOP*/
