--- a/assets/style.css
+++ b/assets/style.css
@@ -920,7 +920,7 @@ padding: 20px 30px;
     overflow: hidden;
     padding: 0px!important;
     overflow-y: scroll;
-    padding-top: var(--m)!important;
+    padding-top: 100px!important;
     padding-bottom: calc(var(--fc) + 20px)!important;
 }
 .go-cart-item__remove {
