--- a/assets/style.css
+++ b/assets/style.css
@@ -151,6 +151,9 @@ select:disabled{
   opacity: 1;
 }
 
+.icon-marchive {
+  z-index: 10;
+}
 /* FONTS
 ================================================== */
 @font-face {
