--- a/assets/style.css
+++ b/assets/style.css
@@ -1224,8 +1224,8 @@ header{
 }
 .switch-view {
   width: 20px;
-  height: auto;
-  background-color: black;
+  height: 20px;;
+  background-color: var(--black);
   grid-column: span 3;
   border: 0px;
 }
