--- a/assets/style.css
+++ b/assets/style.css
@@ -389,9 +389,11 @@ header{
 
 .switch-view{
   padding: 4px 2px 2px 5px;
-  grid-column:1/span 1;
-  height: fit-content;
-  border:0.5px solid black;
+  background-color: var(--black);
+  width: 19px;
+  float: right;
+  height: 19px;
+  border: 0.5px solid black;
 }
 
 .dropdown.dropped{
@@ -1223,9 +1225,6 @@ header{
   grid-column: span 6;
 }
 .switch-view {
-  width: 20px;
-  height: 20px;
-  background-color: var(--black);
   grid-column: span 3;
   border: 0px;
 }
