--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -114,7 +114,7 @@ fernandoepeso.info
     </div>
     <div class="menu">
       <div class="drop">
-        <div class="link">Designers</div>
+        <div class="link">DESIGNERS</div>
         <div class="dropdown">
           {% for link in linklists.designers.links %}
             <div {% if link.active %}class="active"{% endif %}><a class="{{ link.title }}" href="{{ link.url }}">{{ link.title }}</a></div>
@@ -122,7 +122,7 @@ fernandoepeso.info
         </div>
       </div>
       <div class="drop">
-        <div class="link">Categories</div>
+        <div class="link">SHOP</div>
         <div class="dropdown">
           {% for link in linklists.categories.links %}
             <div {% if link.active %}class="active"{% endif %}><a class="{{ link.title }}" href="{{ link.url }}">{{ link.title }}</a></div>
