--- a/snippets/product-body.liquid
+++ b/snippets/product-body.liquid
@@ -26,11 +26,11 @@
           <div class="main-information">
             <div class="info-product">
               <div>Designer</div>
-              <div>{{ product.metafields.custom.designer }}</div>
+              <div style="text-transform:uppercase;">{{ product.metafields.custom.designer }}</div>
             </div>
             <div class="info-product">
               <div>Era</div>
-              <div>{{ product.metafields.custom.era }}</div>
+              <div style="text-transform:lowercase;">{{ product.metafields.custom.era }}</div>
             </div>
             <div class="info-product">
               <div>Item</div>
