--- a/assets/style.css
+++ b/assets/style.css
@@ -1233,10 +1233,11 @@ header{
 
 }
 .menu-open{
+  border: 1px solid black;
   display: block;
   padding-top: 3px!important;
   padding-left: 5px!important;
-  
+
 }
 .drop {
   column-gap: 12px;
