--- a/assets/style.css
+++ b/assets/style.css
@@ -1233,9 +1233,12 @@ header{
 
 }
 .menu-open{
+  height: fit-content;
+  grid-column: span 3;
   display: block;
-  padding-top: 3px!important;
+  padding-top: 2px!important;
   padding-left: 5px!important;
+  border: 0.5px solid grey;
 
 }
 .drop {
