--- a/sections/home-flick.liquid
+++ b/sections/home-flick.liquid
@@ -10,17 +10,17 @@
 
 {% schema %}
 {
-  "name": "banner",
+  "name": "flick",
   "tag": "div",
-  "class": "banner",
+  "class": "flick",
   "blocks": [
     {
-      "type": "double",
-      "name": "double",
+      "type": "image",
+      "name": "image",
       "settings": [
         {
           "type": "image_picker",
-          "id": "double",
+          "id": "image",
           "label": "item"
         }
       ]
