--- a/sections/home-flick.liquid
+++ b/sections/home-flick.liquid
@@ -2,8 +2,10 @@
 {%- for block in section.blocks -%}
     {% case block.type %}
         {% when 'single' %}
-           <div class="home_img">
-                  <img alt="{{ block.settings.single.alt}}" src="{{ block.settings.single | img_url: 'master' }}" />
+           <div class="swiper-slide">
+             <div class="thumbnail-randmon">
+               <img alt="{{ block.settings.single.alt}}" src="{{ block.settings.single | img_url: 'master' }}" />
+             </div>
            </div>
     {% endcase %}
 {% endfor %}
