--- a/sections/home-flick.liquid
+++ b/sections/home-flick.liquid
@@ -1,11 +1,14 @@
+
 {%- for block in section.blocks -%}
     {% case block.type %}
         {% when 'image' %}
-          <img alt="{{ block.settings.image.alt}}" src="{{ block.settings.image | img_url: 'master' }}" />
-        {% endcase %}
-    {% endfor %}
-{% schema %}
+             <div class="thumbnail-randmon">
+               <img alt="{{ block.settings.image.alt}}" src="{{ block.settings.image | img_url: 'master' }}" />
+             </div>
+    {% endcase %}
+{% endfor %}
 
+{% schema %}
 {
   "name": "flick",
   "tag": "div",
