--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -11,8 +11,14 @@
   </svg>
 </div>
 <a href="../collections/all" class="container-fixed">
-  {% section 'home-flick' %}
+    <div class="swiper home">
+      <div class="swiper-wrapper" >
+            {% section 'home-flick' %}
+      </div>
+    </div>
 </a>
+
+
 <style>
   header, footer{
     z-index: -1;
