--- a/sections/home-flick.liquid
+++ b/sections/home-flick.liquid
@@ -2,9 +2,11 @@
 {%- for block in section.blocks -%}
     {% case block.type %}
         {% when 'image' %}
+           <div class="swiper-slide">
              <div class="thumbnail-randmon">
                <img alt="{{ block.settings.image.alt}}" src="{{ block.settings.image | img_url: 'master' }}" />
              </div>
+           </div>
     {% endcase %}
 {% endfor %}
 
