--- a/sections/home-flick.liquid
+++ b/sections/home-flick.liquid
@@ -1,14 +1,14 @@
-{%- for block in section.blocks -%}
+
     {% case block.type %}
         {% when 'image' %}
+            <div class="thumbnail-randmon">
                <img alt="{{ block.settings.image.alt}}" src="{{ block.settings.image | img_url: 'master' }}" />
+           </div>
     {% endcase %}
-{% endfor %}
 
 {% schema %}
 {
-  "name": "swiper-slide",
-  "tag": "div",
+  "tag": "div"
   "class":"swiper-slide",
   "blocks": [
     {
