--- a/sections/home-flick.liquid
+++ b/sections/home-flick.liquid
@@ -8,7 +8,7 @@
 {
   "name": "swiper-slide",
   "tag": "div",
-  "class":"swiper-slide",
+  "class":"randmon-thumb",
   "blocks": [
     {
       "type": "image",
