--- a/sections/home-flick.liquid
+++ b/sections/home-flick.liquid
@@ -2,7 +2,9 @@
     {% case block.type %}
         {% when 'image' %}
                <div class="swiper-slide">
-                 <img alt="{{ block.settings.image.alt}}" src="{{ block.settings.image | img_url: 'master' }}" />
+                 <div class="thumbnail-randmon">
+                    <img alt="{{ block.settings.image.alt}}" src="{{ block.settings.image | img_url: 'master' }}" />
+                 </div>
                </div>
     {% endcase %}
 {% endfor %}
