--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -129,13 +129,13 @@ fernandoepeso.info
           {% endfor %}
         </div>
       </div>
-      <div class="link-about"><a href="../pages/about">About</a></div>
+      <div class="link-about"><a href="../pages/about">ABOUT</a></div>
     </div>
     <div class="cart-part">
       {%- section 'go-cart' -%}
       {%- include "go-cart-button" -%}
   	 </div>
-     <div class="link-about-mobile"><a href="../pages/about">About</a></div>
+     <div class="link-about-mobile"><a href="../pages/about">ABOUT</a></div>
      <div class="switch-view hov"></div>
   </div>
   </header>
