--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -138,6 +138,13 @@ fernandoepeso.info
      <div class="link-about-mobile"><a href="../pages/about">ABOUT</a></div>
      <div class="switch-view hov"></div>
   </div>
+  <div class="sorter">
+        <div class="tit">SORT TO:</div>
+        <div class="ops">
+            <li><a class="sort invert" data-sort="price">Hight to Low</a></li>
+            <li><a class="sort" data-sort="price">Low to high</a></li>
+         </div>
+  </div>
   </header>
   {% if template == 'index'%}
   {%- else -%}
