--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -139,10 +139,11 @@ fernandoepeso.info
      <div class="switch-view hov"></div>
   </div>
   <div class="sorter">
-        <div class="tit">SORT TO:</div>
         <div class="ops">
             <li><a class="sort invert" data-sort="price">Hight to Low</a></li>
             <li><a class="sort" data-sort="price">Low to high</a></li>
+            <li><a class="sort">Featured</a></li>
+            <li><a class="sort">Newest</a></li>
          </div>
   </div>
   </header>
