--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -139,7 +139,8 @@ fernandoepeso.info
      <div class="switch-view hov"></div>
   </div>
   <div class="sorter">
-        <div class="ops">
+      FILTER BY:
+        <div class="drop">
             <li><a class="sort invert" data-sort="price">Hight to Low</a></li>
             <li><a class="sort" data-sort="price">Low to high</a></li>
             <li><a class="sort">Featured</a></li>
