--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -138,9 +138,9 @@ fernandoepeso.info
      <div class="link-about-mobile"><a href="../pages/about">ABOUT</a></div>
      <div class="switch-view hov"></div>
   </div>
-  <div class="sorter">
-      FILTER BY:
-        <div class="drop">
+  <div class="drop">
+      <div class="link">SHOP</div>
+      <div class="dropdown">
             <li><a class="sort invert" data-sort="price">Hight to Low</a></li>
             <li><a class="sort" data-sort="price">Low to high</a></li>
             <li><a class="sort">Featured</a></li>
