--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -139,7 +139,8 @@ fernandoepeso.info
      <div class="switch-view hov"></div>
   </div>
   <div class="drop">
-      <div class="link">SHOP</div>
+      <div class="link">FILTER</div>
+
       <div class="dropdown">
             <li><a class="sort invert" data-sort="price">Hight to Low</a></li>
             <li><a class="sort" data-sort="price">Low to high</a></li>
