--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -142,10 +142,10 @@ fernandoepeso.info
       <div class="link">FILTER</div>
 
       <div class="dropdown">
-            <li><a class="sort invert" data-sort="price">Hight to Low</a></li>
-            <li><a class="sort" data-sort="price">Low to high</a></li>
-            <li><a class="sort">Featured</a></li>
-            <li><a class="sort">Newest</a></li>
+            <a class="sort invert" data-sort="price">Hight to Low</a>
+            <a class="sort" data-sort="price">Low to high</a>
+            <a class="sort">Featured</a>
+            <a class="sort">Newest</a>
          </div>
   </div>
   </header>
