--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -141,10 +141,10 @@ fernandoepeso.info
   <div class="drop">
       <div class="link">FILTER</div>
       <div class="dropdown">
-            <a class="sort invert" data-sort="price">Hight to Low</a>
-            <a class="sort" data-sort="price">Low to high</a>
-            <a class="sort">Featured</a>
-            <a class="sort">Newest</a>
+            <div><a class="sort invert" data-sort="price">Hight to Low</a></div>
+            <div><a class="sort" data-sort="price">Low to high</a></div>
+            <div><a class="sort">Featured</a></div>
+            <div><a class="sort">Newest</a></div>
       </div>
   </div>
   </header>
