--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -141,7 +141,7 @@ fernandoepeso.info
   <div class="drop">
       <div class="link">FILTER</div>
       <div class="dropdown">
-            <div><a class="sort invert" data-sort="price">Hight to Low</a></div>
+            <div style="padding:0px"><a class="sort invert" data-sort="price">Hight to Low</a></div>
             <div><a class="sort" data-sort="price">Low to high</a></div>
             <div><a class="sort">Featured</a></div>
             <div><a class="sort">Newest</a></div>
