--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -141,10 +141,10 @@ fernandoepeso.info
   <div class="drop">
       <div class="link">FILTER</div>
       <div class="dropdown">
-            <div style="padding:0px"><a class="sort invert" data-sort="price">Hight to Low</a></div>
-            <div><a class="sort" data-sort="price">Low to high</a></div>
-            <div><a class="sort">Featured</a></div>
-            <div><a class="sort">Newest</a></div>
+            <div class="sort invert"> data-sort="price">Hight to Low</div>
+            <div class="sort" data-sort="price">Low to high</div>
+            <div class="sort">Featured</div>
+            <div class="sort">Newest</div>
       </div>
   </div>
   </header>
