--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -143,8 +143,8 @@ fernandoepeso.info
       <div class="dropdown">
             <div class="sort invert" data-sort="price">Hight to Low</div>
             <div class="sort" data-sort="price">Low to high</div>
-            <div class="sort">Featured</div>
-            <div class="sort">Newest</div>
+            <div class="featured">Featured</div>
+            <div class="newest">Newest</div>
       </div>
   </div>
   </header>
