--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -141,8 +141,8 @@ fernandoepeso.info
   <div class="drop">
       <div class="link">FILTER</div>
       <div class="dropdown">
-        <li><a class="sort invert" data-sort="price">Hight to Low</a></li>
-        <li><a class="sort" data-sort="price">Low to high</a></li>
+        <div><a class="sort invert" data-sort="price">Hight to Low</div></li>
+        <div><a class="sort" data-sort="price">Low to high</div></li>
             <div class="featured">Featured</div>
             <div class="newest">Newest</div>
       </div>
