--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -141,8 +141,8 @@ fernandoepeso.info
   <div class="drop">
       <div class="link">FILTER</div>
       <div class="dropdown">
-            <div><a class="sort invert" data-sort="price">Hight to Low</div>
-            <div><a class="sort" data-sort="price">Low to high</div>
+            <div><a class="sort invert" data-sort="price">Hight to Low</a></div>
+            <div><a class="sort" data-sort="price">Low to high</a></div>
             <div class="featured">Featured</div>
             <div class="newest">Newest</div>
       </div>
