--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -143,8 +143,8 @@ fernandoepeso.info
       <div class="dropdown">
             <div><a class="sort invert" data-sort="price">Hight to Low</a></div>
             <div><a class="sort" data-sort="price">Low to high</a></div>
-            <div class="featured">Featured</div>
-            <div class="newest">Newest</div>
+            <div><a class="sort featured">Featured</a></div>
+            <div><a class="sort newsest">Newest</a></div>
       </div>
   </div>
   </header>
