--- a/assets/style.css
+++ b/assets/style.css
@@ -421,7 +421,32 @@ header{
   cursor: pointer;
   width: 100%;
 }
-
+.dropdown.filter>div a{
+  padding-left: 5px!important;
+  border-bottom:0.5px solid black;
+  padding: 2px;
+  padding-top: 3px!important;
+  cursor: pointer;
+  width: 100%;
+}
+.dropdown.filter>div a{
+  padding-left: 5px!important;
+  border-bottom:0.5px solid black;
+  padding: 2px;
+  padding-top: 3px!important;
+  cursor: pointer;
+  width: 100%;
+}
+.dropdown.filter>div{
+  padding-left: 0px!important;
+  border-bottom:0.5px solid black;
+  padding: 0px;
+  padding-top: 0px!important;
+}
+.dropdown.filter>div:hover{
+  background-color: var(--black);
+  color: var(--white);;
+}
 .dropdown>div:hover{
   background-color: var(--black);
   color: var(--white);;
