--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -140,7 +140,7 @@ fernandoepeso.info
   </div>
   <div class="drop">
       <div class="link">FILTER</div>
-      <div class="dropdown">
+      <div class="dropdown filter">
             <div><a class="sort invert" data-sort="price">Hight to Low</a></div>
             <div><a class="sort" data-sort="price">Low to high</a></div>
             <div><a class="featured">Featured</a></div>
