--- a/snippets/product-body.liquid
+++ b/snippets/product-body.liquid
@@ -1,5 +1,10 @@
 <!--Product-->
-<div class="product">
+<div class="product"
+      id="{%- if product.has_only_default_variant -%}
+              {%- elsif variants > 1 -%}
+              class="product-variants"
+              {%- endif -%}"
+>
     <a class="thumbnail" href="{{ product.url }}">
       <div class="box"></div>
       <form id="product-actions" action="/cart/add" method="post" enctype="multipart/form-data"
